# MLOPS-PI2

./: Dockerfile  LICENSE  README.md  pyproject.toml  requeriments.txt
dags/: MLOps_pipeline.py
data/: latest
data/20250603/: dataset_preprocessed.csv
models/: test_model.joblib
results/: cross_validation_report.csv  selected_model
scripts/: cross_validation.py  load_data.py  main_api.py  select_model.py  train_model.py
