[project]
name = "mlops-pi2"
version = "0.1.0"
description = "mlops pipeline"
authors = [
    {name = "Samuelab2007",email = "samuel.acevedob@udea.edu.co"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "kaggle (>=1.7.4.5,<2.0.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pandas = "^2.3.0"
scikit-learn = "^1.7.0"
kaggle = "^1.7.4.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
